--- a/VideoGameCollection/VideoGameMVCLayer/Web.config
+++ b/VideoGameCollection/VideoGameMVCLayer/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-VideoGameMVCLayer-20170429062332.mdf;Initial Catalog=aspnet-VideoGameMVCLayer-20170429062332;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--Initial Catalog=aspnet-VideoGameMVCLayer-20170429062332; This attribute might be causing a bug, but I also might need it later
+        and you can't comment out attributes of XML, so I had to stick it here.-->
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-VideoGameMVCLayer-20170429062332.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="GameListModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=VideoGameMVCLayer.Models.GameListModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
